# crescent

./: Cargo.toml  README.md
crates/crescent/: Cargo.toml
crates/crescent-cli/: Cargo.toml
crates/crescent-cli/src/: main.rs
crates/crescent-mcp/: Cargo.toml
crates/crescent-mcp/src/: main.rs
crates/crescent/src/: grid.rs  input.rs  lib.rs  renderer.rs  session.rs  wait.rs
