[package]
name = "crescent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Playwright for terminals — semantic terminal access for AI agents"

[dependencies]
portable-pty = "0.9"
vt100 = "0.16"
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
anyhow = "1"
base64 = "0.22"
shell-words = "1"
